--- a/views/user/login.hbs
+++ b/views/user/login.hbs
@@ -3,10 +3,10 @@
 <form  class="pagelogin" action="/login" method="POST">
 
 <p>USERNAME</p>
-<input type="text" name="theUsername">
+<input type="text" name="username">
 
 <p>PASSWORD</p>
-<input type="password" name="thePassword">
+<input type="password" name="password">
 <br>
 <button class="login">SIGN IN</button>
 
