--- a/views/user/secret.hbs
+++ b/views/user/secret.hbs
@@ -1,11 +1,9 @@
-<h1>
-  SECRET
-  PAGE
-  SECRET
-  PAGE
-</h1>
+<body class ="secret">
+<h1> Profile</h1>
 
 <h2>
-
   WELCOME {{theUser.username}}
+  
 </h2>
+
+</body>
