--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,23 +1,24 @@
 body {
   padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  background: #a0c9cb;
-  background: linear-gradient(0deg, #a0c9cb 0%, #2d95fd 100%);
-  background-size: contain; }
+  background: #FECEA8;
+  background-size: cover; }
 
 a {
   color: black; }
 
 .navbar {
-  background: white;
+  paddding: 5px;
+  background: #2A363B;
   font-size: 20px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
-  border-radius: 5px; }
+  border-radius: 5px;
+  opacity: .9; }
 
 .navbar a {
-  color: black;
+  color: white;
   text-decoration: none; }
 
 .all {
@@ -37,15 +38,42 @@ a {
   font-size: 12px; }
 
 .login {
-  background: #fff45d;
-  color: black;
-  font-size: 10px;
-  border-radius: 5px; }
+  background: #81dadf;
+  color: white;
+  font-size: 14px;
+  border-radius: 10px;
+  padding: 2px;
+  border-width: 1.5px;
+  border-color: white; }
 
 .pagelogin {
   display: flex;
   justify-content: center;
   align-items: center;
   padding-top: 50px; }
+
+.alert {
+  padding: 20px;
+  background-color: #f44336;
+  color: white;
+  opacity: .9;
+  transition: opacity 0.6s;
+  margin-bottom: 15px; }
+
+.alert.warning {
+  background-color: #be3131; }
+
+.closebtn {
+  margin-left: 15px;
+  color: white;
+  font-weight: bold;
+  float: center;
+  font-size: 22px;
+  line-height: 20px;
+  cursor: pointer;
+  transition: 0.3s; }
+
+.secret {
+  background-color: #9af0f3; }
 
 /*# sourceMappingURL=style.css.map */
