--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -1,9 +1,8 @@
 body {
     padding: 50px;
     font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-    background: rgb(160, 201, 203);
-    background: linear-gradient(0deg, rgba(160, 201, 203, 1) 0%, rgba(45, 149, 253, 1) 100%);
-    background-size: contain;
+    background: #FECEA8;
+    background-size: cover;
 }
 
 a {
@@ -11,16 +10,18 @@ a {
 }
 
 .navbar {
-    background: white;
+    paddding: 5px;
+    background: #2A363B;
     font-size: 20px;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     border-radius: 5px;
+    opacity: .9;
 }
 
 .navbar a {
-    color: black;
+    color: white;
     text-decoration: none;
 }
 
@@ -44,10 +45,13 @@ a {
 }
 
 .login {
-    background: rgb(255, 244, 93);
-    color: black;
-    font-size: 10px;
-    border-radius: 5px;
+    background: rgb(129, 218, 223);
+    color: white;
+    font-size: 14px;
+    border-radius: 10px;
+    padding: 2px;
+    border-width: 1.5px;
+    border-color: white;
 }
 
 .pagelogin {
@@ -55,4 +59,32 @@ a {
     justify-content: center;
     align-items: center;
     padding-top: 50px;
+}
+
+.alert {
+    padding: 20px;
+    background-color: #f44336;
+    color: white;
+    opacity: .9;
+    transition: opacity 0.6s;
+    margin-bottom: 15px;
+}
+
+.alert.warning {
+    background-color: #be3131;
+}
+
+.closebtn {
+    margin-left: 15px;
+    color: white;
+    font-weight: bold;
+    float: center;
+    font-size: 22px;
+    line-height: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+
+.secret {
+    background-color: rgb(154, 240, 243);
 }
