Delete account feature

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -74,6 +74,6 @@ a {
   transition: 0.3s; }
 
 .secret {
-  background-color: #9af0f3; }
+  background-color: #a4edff; }
 
 /*# sourceMappingURL=style.css.map */
