--- a/views/user/secret.hbs
+++ b/views/user/secret.hbs
@@ -6,4 +6,10 @@
   
 </h2>
 
+<form action="/user/delete/{{this._id}}" method="POST">
+    <button class ="button">DELETE MY ACCOUNT</button>
+</form>
+
+
+
 </body>
